--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,12 @@ html {
 }
 
 body {
-    min-width: 1100px;
+    min-width: 1200px;
    /* padding-right: -500px; */
+}
+
+main {
+    overflow: hidden;
 }
 
 .wrap {
@@ -39,7 +43,7 @@ body {
     text-align: center;
     position: relative;
     top: 0px;
-    left: 750px;
+    left: 600px;
 }
 
 .snsmenu li {
@@ -70,7 +74,7 @@ body {
     text-align: center;
     padding-right: 10px;
     position: relative;
-    left: 750px;
+    left: 600px;
 }
 
 .menubar li {
@@ -167,7 +171,7 @@ h1 {
     position: absolute;
     top: 500px;
     height: auto;
-    width: 900px;
+    width: 100%;
     background-color:  rgb(255, 255, 255, 0.7);
     transform: skewX(-5deg); 
     transform: skewY(-5deg); 
@@ -335,6 +339,7 @@ h3 {
 @media screen and (max-width:480px) { 
 
 
+
 }
 
 /* タブレット */
@@ -342,11 +347,20 @@ h3 {
 
 body {
     min-width: 760px;
+    /* overflow: hidden; */
+}
+
+main {
+    overflow: hidden;
+    width: 100%;
+    height: 2700px;
 }
 
 .wrap {
     overflow: hidden;
 }
+
+
 
 .menu {
     height: 25px;;
@@ -378,7 +392,7 @@ body {
 
 .rogo img {
     height: 60px;
-    position: absolute;
+    position: relative;
     top: 10px;
     left: 30px;
 }
@@ -387,9 +401,14 @@ body {
     width: 600px;
 }
 
-.top {
-    display: none;
+.btn li:hover {
+    height: 50px;
 }
+
+.contens {
+    width: 100%;
+}
+
 
 h1 {
     font-size: 40px;
@@ -397,4 +416,53 @@ h1 {
     text-align: center;
 }
   
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.seki:nth-child(n + 2) {
+    margin-top: -40px;
+}
+
+.seki:last-child {
+    border-top: 0px solid gray;
+}
+
+.top {
+    display: none;
+}
+
+/* footer */
+
+.end {
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    z-index: -1;
+}
+
+.fourbtn {
+    position: relative;
+    top: 150px;
+    left: 250px;
+}
+
+.copyright {
+    width: 100%;
+}
+
+}
+
+@media screen and (min-width:1138px) {
+
+.seki:nth-child(n+3) {
+    margin-top: 40px;
+}
+
+.seki:nth-last-child(-n+2) {
+    border-bottom: 0px solid gray;
+}
+
 }
