--- a/assets/style.css
+++ b/assets/style.css
@@ -85,11 +85,13 @@ body {
 
 /* 非表示にする */
 .none {
-    z-index: -5;
+    /* z-index: -5; */
+    opacity: 0;
 }
 
 #humberger {
-    z-index: -5;
+    /* z-index: -5; */
+    opacity: 0;
 }
 
 /* ハンバーガーメニュー */
@@ -410,6 +412,12 @@ main {
 }
 
 .menubar li{
+    font-size: 12px;
+    position: relative;
+    left: 70px;
+}
+
+.midlenone {
     display: none;
 }
    
@@ -441,13 +449,13 @@ main {
     height: 50px;
 }
 
-/* .none {
-    z-index: 5;
+.none {
+    opacity: 1;
 }
 
 #humberger {
-    z-index: 5;
-} */
+  opacity: 1;
+}
 
 /*  main */
 
@@ -512,10 +520,6 @@ footer {
 /* タブレット */
 @media screen and (min-width:510px) and (max-width:760px){
 
-body {
-    min-width: 760px;
-    /* overflow: hidden; */
-}
 
 main {
     overflow: hidden;
@@ -566,7 +570,6 @@ main {
     position: absolute;
     top: 10px;
     left: 0px; 
-    float: left;
 }
 
 .btn {
@@ -588,11 +591,11 @@ main {
 
 /* メニューバーの文字表示にする */
 .none {
-    z-index: 5;
+    opacity: 1;
 }
 
 #humberger {
-    z-index: 5;
+    opacity: 1;
 }
 
 .contens {
